k8s/frontendDeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: frontend-pod
      labels:
        app: frontend
    spec:
      containers:
        - name: chatapp-frontend
          image: sagarbhandari4356/chatapp_frontend:latest
          ports:
            - containerPort: 80
